# Yipin

./: .env.example  .gitignore  Dockerfile  Procfile  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
api/: index.py
cf-radar/public/: index.html
config/: products.yaml  settings.py
dashboard/: app.py
docs/: 朋友待办清单.md
scripts/: download_fonts.sh  quick_start.sh  setup_wizard.py  test_pipeline_dry_run.py
src/adops/: campaign.py  optimizer.py  qianchuan.py
src/analytics/: feedback.py  reporter.py
src/common/: retry.py  startup.py  tenant.py
src/creative/: composer.py  pipeline.py  scriptwriter.py  voice.py
src/db/: models.py
src/fulfillment/: doudian.py  processor.py  supplier.py  webhook.py
src/growth/: auto_outreach.py  billing.py  demo_generator.py  foot_traffic.py  onboarding.py  seo_content.py  server.py
src/growth/static/: index.html
src/growth/static/outreach/: latest_batch.json
src/growth/static/radar/: index.html
src/growth/static/seo/: 01-千川投流效果差怎么办.html  02-千川代投收费标准.html  03-抖店千川怎么投效果好.html  04-千川素材制作成本太高.html  05-千川投流自动化工具.html  06-AI千川投流.html  07-千川短视频素材批量制作.html  08-千川ROI太低怎么优化.html  09-千川投手太贵请不起.html  article_01.html  article_02.html  article_03.html  article_04.html  article_05.html  index.html  index.json
src/notify/: feishu.py
src/scheduler/: jobs.py
tests/: test_e2e_simulation.py
